syntax = "proto3";

package orchestrator;

option go_package = "github.com/Optiq-CTO/orchestrator/api/proto";

service OrchestratorService {
  rpc RunPipeline(PipelineRequest) returns (PipelineResponse) {}
}

message PipelineRequest {
  string flow_name = 1; // "cross_pollinator", "trend_jacker"
  map<string, string> params = 2; // e.g. "query": "golang", "target_platform": "linkedin"
}

message PipelineResponse {
  string pipeline_id = 1;
  string status = 2; // "completed", "failed"
  repeated string output_urls = 3; // URLs of published posts
  string error_message = 4;
}
